syntax = "proto3";

import "consumer.proto";
import "merchant.proto";

//积分生成、消费、兑换、查询操作，可电话号码或者用户ID做KEY

// 生成消费记录
message ConsumptionCreateRequest {
    string numbers = 1; // 用户手机号
    string identity = 2;    // 用户ID
    string merchant_identity = 3;   //商家ID

    uint32 sums = 10;   //消费金额
};

message ConsumptionCreateResponse {
    string credit_identity = 1;     // 消费ID or 积分ID，是同一个东西
};

// 商家查询用户拥有的积分
message MerchantCreditRetrieveRequest {
    string numbers = 1;     // 商家管理员
    string identity = 2;    // 管理员ID
    string merchant_identity = 3;   // 商家ID，不给出则查询管理员所有商家积分
    string consumer_numbers = 4;    // 用户号码，merchant_identity存在时才有意义，给出则只查该用户的积分
}

message MerchantCreditRetrieveResponse {
    repeated MerchantCredit merchant_credit = 1;    //商家积分详情
}

// 商家确认消费兑换成积分
message ConfirmConsumptionRequest {
    string numbers = 1; // 操作员
    string identity = 2;    // 操作员ID

    string merchant_identity = 3;   // 商家ID
    string credit_identity = 4; // 消费ID

    uint64 sums = 5;        // 消费的金额

    //uint64 credit = 10;      // 兑换成多少积分，不填则后台使用兑换比例计算
}

message ConfirmConsumptionResponse {

}

message RefuseConsumptionRequest {
    string numbers = 1; // 操作员
    string identity = 2;    // 操作员ID

    string merchant_identity = 3;   // 商家ID
    string credit_identity = 4; // 消费ID

    string reason = 10;      // 拒绝原因
}

message RefuseConsumptionResponse {

}

// 商家赠送积分
message CreditFreeRequest {
    string numbers = 1; // 用户手机号
    string identity = 2;    // 用户ID
    string merchant_identity = 3;   //商家ID
    string manager_numbers = 4;     //操作员账号
    string manager_identity = 5;     //操作员ID

    uint64 credit = 10;   // 赠送的积分量
}

message CreditFreeResponse {
    string credit_identity = 1;     // 消费ID or 积分ID，是同一个东西
}

// 用户查询拥有的积分
message ConsumerCreditRetrieveRequest {
    string numbers = 1;     // 用户手机号
    string identity = 2;    // 用户ID
    string merchant_identity = 3;   // 如果没有则查询用户拥有的所有商家的积分
}

message ConsumerCreditRetrieveResponse {
    ConsumerCredit consumer_credit = 1;
}

// TODO...商家赠送积分查询
message CreditFreeRetrieveRequest {

}

message CreditFreeRetrieveResponse {

}

// TODO...消费记录查询
message ConsumptionRetrieveRequest {
    string numbers = 1; // 用户手机号
    string identity = 2;    // 用户ID
}

//（用户ID，商户ID，消费金额，消费时间，是否兑换成积分，兑换成多少积分，兑换操作管理员，兑换时间，积分剩余量）
message ConsumptionRetrieveResponse {

}

// 使用积分消费
message ConsumeCreditRequest {
    string numbers = 1; // 用户手机号
    string identity = 2;    // 用户ID;
    string credit_identity = 3; // 积分ID
    //string merchant_identity = 4;   //商家ID
    uint64 credit = 10;  // 消费的积分量
}

message ConsumeCreditResponse {

}

// 积分消费记录查询
message ConsumeCreditRetrieveRequest {
    string numbers = 1; // 用户手机号
    string identity = 2;    // 用户ID;

    string begin_time = 3;  // [begin_time, end_time]
    string end_time = 4;    // [2000-10-23, 2015-10-23]
    uint32 limit = 5;       // 最多查询条数
}

message ConsumeCreditRetrieveResponse {
    repeated ConsumeRecord consume_record = 1;
}

// 积分兑换
message CreditExchangeRequest {
    string numbers = 1; // 用户手机号
    string identity = 2;    // 用户ID;
    string credit_identity = 3; // 用户拥有的商家的积分
    string to_merchant = 4; // 兑换至商家ID
    string credit = 5;      // 兑换量
}

message CreditExchangeResponse {
    string credit = 1;      // 兑换成多少积分
}

// 积分兑换记录查询
message CreditExchangeRetrieveRequest {
    string numbers = 1; // 用户手机号
    string identity = 2;    // 用户ID;

    string begin_time = 3;  // [begin_time, end_time]
    string end_time = 4;    // [2000-10-23, 2015-10-23]
    uint32 limit = 5;       // 最多查询条数
}

message CreditExchangeRetrieveResponse {
    repeated ExchangeRecord exchange_record = 1;
}

//（用户ID，商户ID，消费金额，消费时间，是否兑换成积分，兑换成多少积分，兑换操作管理员，兑换时间，积分剩余量）
message CreditMaterial {
    string type = 1;        // 积分类型，consumption、gift、exchange、refuse

    uint32 sums = 2;
    string consumption_time = 3;

    uint32 exchanged = 4;   // 是否兑换成积分，1-yes、0-no
    uint64 credit = 5;
    string manager_numbers = 6;
    string exchange_time = 7;

    uint64 credit_rest = 8; // 还剩多少积分

    string expire_time = 9;
    string merchant_identity = 10;

    string identity = 11;    // 回包带上
    string numbers = 12;    // 回包带上，给前端再次拉用户资料的机会
}

// 商家积分
message MerchantAggregationCredit {
    MerchantMaterial merchant = 1;
    repeated CreditMaterial credit = 2;
}

// 用户拥有某商家积分
message ConsumerAggregationCredit {
    ConsumerMaterial consumer = 1;
    repeated CreditMaterial credit = 2;
}

// 商家发放的积分，按用户聚集操作
message MerchantCredit {
    MerchantMaterial merchant = 1;
    repeated ConsumerAggregationCredit aggressive_credit = 2;
}

// 用户拥有的积分，按商家聚集操作
message ConsumerCredit {
    ConsumerMaterial consumer = 1;
    repeated MerchantAggregationCredit aggressive_credit = 2;
}

// 消费记录详情
message ConsumeMaterial {
    string consume_time = 1;    //消费时间
    string credit_identity = 2;
    uint64 credit = 3;          //积分量
    string identity = 4;    // 消费记录ID
}

// 用户消费记录
message ConsumeRecord {
    MerchantMaterial merchant = 1;
    repeated ConsumeMaterial consume = 2;
}

// 兑换记录详情
message ExchangeMaterial {
    string exchange_time = 1;    // 消费时间
    uint64 from_credit = 4;      // 积分量
    uint64 to_credit = 5;        // 积分量
    string identity = 6;         // 兑换记录ID
}

// 用户积分兑换记录
message ExchangeRecord {
    MerchantMaterial from_merchant = 1;
    MerchantMaterial to_merchant = 2;
    repeated ExchangeMaterial exchange = 3;
}
